# CproTeach

./: CMakeLists.txt  README.md  main.c
Header/: exceptio.h  genlib.h  strlib.h  teach.h
source/: exceptio.c  genlib.c  simpio.c  strlib.c  teach.c
